--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,9 +7,11 @@ edition = "2021"
 byteorder = { version = "1.2.1", default-features = false }
 embedded-hal = "0.2"
 linux-embedded-hal = { version = "0.3.2" }
-mockito = { version = "0.31" }
+md-5 = {version = "0.10.5" }
+mockito = { version = "1.0.2" }
 openssl = { version = "0.10.35", features = ["vendored"] }
 reqwest = { version = "0.11", features = ['blocking'] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = { version = "1.0" }
-toml = { version = "0.5.10" }
+serde-xml-rs = {version = "0.6.0" }
+toml = { version = "0.7.3" }
