--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,9 +9,10 @@ embedded-hal = "0.2"
 linux-embedded-hal = { version = "0.3.2" }
 md-5 = {version = "0.10.5" }
 mockito = { version = "1.0.2" }
-openssl = { version = "0.10.35", features = ["vendored"] }
-reqwest = { version = "0.11", features = ['blocking'] }
-serde = { version = "1.0", features = ["derive"] }
+openssl = { version = "0.10.35", features = ['vendored'] }
+reqwest = { version = "0.11", features = ['blocking', 'json'] }
+serde = { version = "1.0", features = ['derive'] }
 serde_json = { version = "1.0" }
 serde-xml-rs = {version = "0.6.0" }
 toml = { version = "0.7.3" }
+chrono = "0.4.31"
